--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/show.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/show.html.twig
@@ -1,4 +1,10 @@
+{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+
 {% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory)#}
 {% set vars = configuration.vars %} {# Additional variables passed from yml #}
 
-{{ dump() }}
+{% block content %}
+
+    {{ dump() }}
+
+{% endblock %}
