--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
@@ -1,9 +1,15 @@
+{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+
 {% set definition = resources.definition %} {# Grid data (limits, fields, filters) #}
 {% set data = resources.data %} {# Grid data from passed entity #}
 {% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory) #}
 {% set vars = configuration.vars %} {# Additional variables passed from yml #}
 
-{{ sylius_grid_render(resources, 'NugatoNuCmsBundle:Admin/Crud/partial:_header.html.twig') }}
+{% block content %}
 
-{{ dump() }}
-{{ vars.header|trans }}
+    {{ sylius_grid_render(resources, 'NugatoNuCmsBundle:Admin/Crud/partial:_header.html.twig') }}
+
+    {{ dump() }}
+    {{ vars.header|trans }}
+
+{% endblock %}
