--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/update.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/update.html.twig
@@ -1,14 +1,20 @@
+{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+
 {% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory)#}
 {% set vars = configuration.vars %} {# Additional variables passed from yml #}
 {% set route = configuration.getRouteName('update', {'id': resource.id}) %} {# current route #}
 
-{{ form_start(form, {'action': path(route, {'id': resource.id}), 'attr': {'class': '', 'novalidate': 'novalidate'}}) }}
+{% block content %}
+
+    {{ form_start(form, {'action': path(route, {'id': resource.id}), 'attr': {'class': '', 'novalidate': 'novalidate'}}) }}
 
     {{ form_widget(form) }}
 
-<button type="submit">Save</button>
-<input type="hidden" name="_method" value="PUT"/>
+    <button type="submit">Save</button>
+    <input type="hidden" name="_method" value="PUT"/>
 
-{{ form_end(form) }}
+    {{ form_end(form) }}
 
-{{ dump() }}
+    {{ dump() }}
+
+{% endblock %}
