--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Security/login.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Security/login.html.twig
@@ -4,7 +4,7 @@
 
     {{ dump() }}
     {% if error %}
-        <div>
+        <div class="page-error_msg">
             {{ error.message }}
         </div>
     {% endif %}
@@ -14,7 +14,6 @@
     <div>
         {{ form_row(form._username, {'value': last_username|default('')}) }}
         {{ form_row(form._password) }}
-        {#{{ form_row(form._remember_me) }}#}
 
         <input type="hidden" name="_csrf_admin_security_token" value="{{ csrf_token('admin_authenticate') }}">
         <button type="submit">Login</button>
