--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-    Welcome in dashboard
+    {#{{ dump() }}#}
+    {{ "hello"|trans }} in dashboard
+    {{ "welcome"|trans }}
 
 {% endblock %}
