--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Default/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Default/index.html.twig
@@ -16,7 +16,7 @@
     {% endblock %}
 </head>
 <body>
-Hello NugatoNuCmsBundle!
+{{ "hello"|trans }} NugatoNuCmsBundle!
 {% block content %}
 {% endblock %}
 
