--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/base.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/base.html.twig
@@ -13,6 +13,10 @@
     {% endblock %}
 
     {% block stylesheets %}
+
+        <!-- UIkit CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/css/uikit.min.css" />
+
     {% endblock %}
 </head>
 <body>
@@ -20,6 +24,11 @@
 {% endblock %}
 
 {% block javascripts %}
+
+    <!-- UIkit JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit-icons.min.js"></script>
+
 {% endblock %}
 </body>
 </html>
