Create test for logout

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Security/login.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Security/login.html.twig
@@ -2,6 +2,8 @@
 
 {% form_theme form '@NugatoNuCms/Admin/Form/theme.html.twig' %}
 
+{% block navbar %}{% endblock %}
+
 {% block content %}
 
     <div class="uk-position-center">
