Add menu using knp menu bundle

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/_navbar.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/_navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="uk-navbar uk-navbar-container" uk-navbar>
     <div class="uk-navbar-left">
         <a class="uk-navbar-toggle" href="#" uk-toggle="target: #offcanvas-nav">
-            <span uk-navbar-toggle-icon></span> <span class="uk-margin-left">Menu</span>
+            <span uk-navbar-toggle-icon></span> <span class="uk-margin-left">{{ 'nucms.ui.menu.label'|trans() }}</span>
         </a>
     </div>
 
