--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/update.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/update.html.twig
@@ -1,5 +1,5 @@
 {% set path = options.link.url|default(path(options.link.route|default(grid.requestConfiguration.getRouteName('update')), options.link.parameters|default({'id': data.id}))) %}
 
 <a href="{{ path }}" class="uk-button uk-button-primary uk-button-small" uk-icon="icon: file-edit">
-    {{ action.label|trans }}
+    {{ (action.label is empty) ? 'nucms.ui.edit'|trans : action.label|trans }}
 </a>
