--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
@@ -1,9 +1,9 @@
 {% set path = options.link.url|default(path(options.link.route|default(grid.requestConfiguration.getRouteName('delete')), options.link.parameters|default({'id': data.id}))) %}
 
 <form action="{{ path }}" method="post">
-    <input type="hidden" name="_method" value="DELETE">
-    <button class="uk-button uk-button-primary uk-button-small" uk-icon="icon: trash" type="submit">
+    <button class="uk-button uk-button-primary uk-button-small uk-margin-left" uk-icon="icon: trash" type="submit">
         {{ (action.label is empty) ? 'nucms.ui.delete'|trans : action.label|trans }}
     </button>
+    <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token(data.id) }}"/>
 </form>
