--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
@@ -14,6 +14,8 @@
 
     <h1>{{ header|trans }}</h1>
 
+    {% include('NugatoNuCmsBundle:Admin/Alerts:_flashes.html.twig') %}
+
     {# Actions - main #}
     <div>
         {% if definition.actionGroups.main is defined %}
