--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/create.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/create.html.twig
@@ -3,8 +3,9 @@
 {% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory)#}
 {% set vars = configuration.vars %} {# Additional variables passed from yml #}
 
-
 {% block content %}
+
+    {% include('NugatoNuCmsBundle:Admin/Alerts:_flashes.html.twig') %}
 
     {{ form_start(form) }}
 
@@ -13,7 +14,5 @@
     <button type="submit">Add</button>
 
     {{ form_end(form) }}
-
-    {{ dump() }}
 
 {% endblock %}
