Create pages Adding Behat context

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Alerts/_flashes.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Alerts/_flashes.html.twig
@@ -1,6 +1,6 @@
 {% for label, messages in app.flashes(['success', 'warning', 'error']) %}
     {% for flash in messages %}
-        <div class="alert alert-{{ label }}">
+        <div class="alert alert-{{ label }} t-alert_flashes-{{ label }}">
             {% set params = flash.parameters %}
             {% set params = params|merge({'%resource%': params['%resource%']|trans([], 'flashes')}) %}
 
