--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/create.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/create.html.twig
@@ -11,7 +11,7 @@
 
     {{ form_widget(form) }}
 
-    <button type="submit">Add</button>
+    <button type="submit" class="t-create_submit_button">{{ 'nucms.ui.create'|trans }}</button>
 
     {{ form_end(form) }}
 
