--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
@@ -1,7 +1,7 @@
 {% set path = options.link.url|default(path(options.link.route|default(grid.requestConfiguration.getRouteName('delete')), options.link.parameters|default({'id': data.id}))) %}
 
 <form action="{{ path }}" method="post">
-    <button class="uk-button uk-button-primary uk-button-small uk-margin-left" uk-icon="icon: trash" type="submit">
+    <button class="uk-button uk-button-primary uk-button-small uk-margin-left t-delete_button" uk-icon="icon: trash" type="submit">
         {{ (action.label is empty) ? 'nucms.ui.delete'|trans : action.label|trans }}
     </button>
     <input type="hidden" name="_method" value="DELETE">
