--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Form/theme.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Form/theme.html.twig
@@ -1,26 +1,1 @@
-{% extends 'form_div_layout.html.twig' %}
-
-{# ----------------- form_row ----------------- #}
-{% block form_row -%}
-    <div class="uk-margin {% if required %}required {% endif %}field{% if (not compound or force_error|default(false)) and not valid %} uk-form-danger {% endif %}">
-        {{- form_label(form) -}}
-        {{- form_widget(form) -}}
-        {{- form_errors(form) -}}
-    </div>
-{%- endblock form_row %}
-
-{# ----------------- form_label ----------------- #}
-{%- block form_label -%}
-    {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' uk-form-label')|trim}) %}
-    {{- parent() -}}
-{%- endblock form_label -%}
-
-{# ----------------- form_widget_simple ----------------- #}
-{% block form_widget_simple -%}
-    {% if type is not defined or type not in ['file', 'hidden'] %}
-        {%- set attr = attr|merge({class: (attr.class|default('') ~ ' uk-input')|trim}) -%}
-    {% endif %}
-    <div class="uk-form-controls">
-        {{- parent() -}}
-    </div>
-{%- endblock form_widget_simple %}
+{% use "bootstrap_3_layout.html.twig" %}
