--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Macro/pagination.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Macro/pagination.html.twig
@@ -1,5 +1,5 @@
 {% macro simple(paginator, options) %}
     {% if paginator.haveToPaginate() %}
-        {{ pagerfanta(paginator, 'ui_kit', options|default({})) }}
+        {{ pagerfanta(paginator, 'twitter_bootstrap4', options|default({})) }}
     {% endif %}
 {% endmacro %}
