--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Security/login.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Security/login.html.twig
@@ -1,18 +1,18 @@
-{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+{% extends '@NugatoNuCms/Admin/base.html.twig' %}
 
 {% form_theme form '@NugatoNuCms/Admin/Form/theme.html.twig' %}
 
 {% block navbar %}{% endblock %}
+{% block sidebar %}{% endblock %}
 
-{% block content %}
+{% block layout %}
 
-    <div class="uk-position-center">
-        <h1 class="uk-heading-divider">{{ 'nucms.ui.login.header'|trans }}</h1>
+    <div class="mx-auto mt-5" style="width: 500px;">
+        <h1 class="mb-4">{{ 'nucms.ui.login.header'|trans }}</h1>
 
         {% if error %}
 
-            <div class="t-error_msg uk-alert-danger" uk-alert>
-                <a class="uk-alert-close" uk-close></a>
+            <div class="alert alert-danger t-error_msg">
                 <p>{{ error.message }}</p>
             </div>
 
@@ -25,7 +25,7 @@
 
         <input type="hidden" name="_csrf_admin_security_token" value="{{ csrf_token('admin_authenticate') }}">
 
-        <button class="t-login_button uk-button uk-button-primary">{{ 'nucms.ui.login.login'|trans }}</button>
+        <button class="btn btn-primary t-login_button">{{ 'nucms.ui.login.login'|trans }}</button>
 
         {{ form_end(form, {'render_rest': false}) }}
     </div>
