--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
 
-{% import 'NugatoNuCmsBundle:Admin/Macro:sorting.html.twig' as sorting %}
-{% import 'NugatoNuCmsBundle:Admin/Macro:pagination.html.twig' as pagination %}
+{% import '@NugatoNuCms/Admin/Macro/sorting.html.twig' as sorting %}
+{% import '@NugatoNuCms/Admin/Macro/pagination.html.twig' as pagination %}
 
 {% set definition = resources.definition %} {# Grid data (limits, fields, filters) #}
 {% set data = resources.data %}  {# Grid data from passed entity #}
@@ -13,64 +13,81 @@
 
 {% block content %}
 
-    <h1>{{ header|trans }}</h1>
+    <h1 class="mb-4">{{ header|trans }}</h1>
 
     {% include('NugatoNuCmsBundle:Admin/Alerts:_flashes.html.twig') %}
 
     {# Actions - main #}
-    <div>
-        {% if definition.actionGroups.main is defined %}
-            {% for action in definition.getEnabledActions('main') %}
-                {{ sylius_grid_render_action(resources, action, null) }}
-            {% endfor %}
-        {% endif %}
+    <div class="row mb-4">
+        <div class="col-sm-4">
+            {% if definition.actionGroups.main is defined %}
+                {% for action in definition.getEnabledActions('main') %}
+                    {{ sylius_grid_render_action(resources, action, null) }}
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div class="col-sm-8">
+            <div class="float-right">
+                {% if data|length > 0 %}
+                    {# Pagination - top #}
+                    {{ pagination.simple(data) }}
+                {% endif %}
+            </div>
+        </div>
     </div>
 
     {% if data|length > 0 %}
 
-        {# Pagination - top #}
-        {{ pagination.simple(data) }}
-
-        <table class="uk-table uk-table-striped">
-            <thead>
-            <tr>
-                {# Headers #}
-                {% for field in definition.fields %}
-                    {% if field.enabled %}
-                        {% if field.isSortable %}
-                            {{ sorting.tableHeader(grid, field, app.request.attributes) }}
-                        {% else %}
-                            <th class="table-column-{{ field.name }}">{{ field.label|trans }}</th>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
-            </tr>
-            </thead>
-            <tbody>
-            {% for row in data %}
+        <div class="table-responsive">
+            <table class="table table-striped table-hover">
+                <thead>
                 <tr>
-                    {# Data #}
-                    {% for field in definition.enabledFields %}
-                        <td>{{ sylius_grid_render_field(grid, field, row) }}</td>
+                    {# Headers #}
+                    {% for field in definition.fields %}
+                        {% if field.enabled %}
+                            {% if field.isSortable %}
+                                {{ sorting.tableHeader(grid, field, app.request.attributes) }}
+                            {% else %}
+                                <th class="table-column-{{ field.name }}">{{ field.label|trans }}</th>
+                            {% endif %}
+                        {% endif %}
                     {% endfor %}
-
-                    {# Actions - item #}
-                    {% if definition.actionGroups.item is defined and definition.getEnabledActions('item')|length > 0 %}
-                        <td class="uk-width-medium uk-text-right">
-                            <div class="uk-button-group">
-                                {% for action in definition.getEnabledActions('item') %}
-                                    {{ sylius_grid_render_action(grid, action, row) }}
-                                {% endfor %}
-                            </div>
-                        </td>
-                    {% endif %}
+                    <th></th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for row in data %}
+                    <tr>
+                        {# Data #}
+                        {% for field in definition.enabledFields %}
+                            <td>{{ sylius_grid_render_field(grid, field, row) }}</td>
+                        {% endfor %}
 
-        {# Pagination - bottom #}
-        {{ pagination.simple(data) }}
+                        {# Actions - item #}
+                        {% if definition.actionGroups.item is defined and definition.getEnabledActions('item')|length > 0 %}
+                            <td>
+                                <div class="btn-group" role="group">
+                                    {% for action in definition.getEnabledActions('item') %}
+                                        {{ sylius_grid_render_action(grid, action, row) }}
+                                    {% endfor %}
+                                </div>
+                            </td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-8">
+                <div class="float-right">
+                    {# Pagination - bottom #}
+                    {{ pagination.simple(data) }}
+                </div>
+            </div>
+        </div>
 
     {% else %}
         {# @todo info about no records #}
