--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/show.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/show.html.twig
@@ -1,11 +1,11 @@
-{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+{% extends '@NugatoNuCms/Admin/base.html.twig' %}
 
 {% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory)#}
 {% set vars = configuration.vars %} {# Additional variables passed from yml #}
 
 {% block content %}
 
-    {% include('NugatoNuCmsBundle:Admin/Alerts:_flashes.html.twig') %}
+    {% include('@NugatoNuCms/Admin/Alerts/_flashes.html.twig') %}
 
     {{ dump() }}
 
