--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/update.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/update.html.twig
@@ -1,18 +1,20 @@
-{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+{% extends '@NugatoNuCms/Admin/base.html.twig' %}
 
 {% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory)#}
 {% set vars = configuration.vars %} {# Additional variables passed from yml #}
 {% set route = configuration.getRouteName('update', {'id': resource.id}) %} {# current route #}
 
+{% form_theme form '@NugatoNuCms/Admin/Form/theme.html.twig' %}
+
 {% block content %}
 
-    {% include('NugatoNuCmsBundle:Admin/Alerts:_flashes.html.twig') %}
+    {% include('@NugatoNuCms/Admin/Alerts/_flashes.html.twig') %}
 
     {{ form_start(form, {'action': path(route, {'id': resource.id}), 'attr': {'class': '', 'novalidate': 'novalidate'}}) }}
 
     {{ form_widget(form) }}
 
-    <button type="submit">Save</button>
+    <button class="btn btn-primary" type="submit">{{ 'nucms.ui.save'|trans }}</button>
     <input type="hidden" name="_method" value="PUT"/>
 
     {{ form_end(form) }}
