--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/index.html.twig
@@ -1,8 +1,7 @@
-{% extends 'NugatoNuCmsBundle:Admin:base.html.twig' %}
+{% extends '@NugatoNuCms/Admin/base.html.twig' %}
 
 {% block content %}
 
-    {#{{ dump() }}#}
     {{ "hello"|trans }} in dashboard
     {{ "welcome"|trans }}
 
