--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Menu/sidebar_menu.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Menu/sidebar_menu.html.twig
@@ -1,19 +1,20 @@
 {% extends 'knp_menu.html.twig' %}
 
+{% import _self as knp_menu %}
+
 {% block list %}
 
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
 
         {% if item.level > 0 %}
-            {% set class = 'uk-nav-sub' %}
+            {% set class = ' submenu' %}
         {% else %}
-            {% set class = 'uk-nav uk-nav-default' %}
+            {% set class = '' %}
         {% endif %}
-
-        <ul class="{{ class }}">
+        <div class="list-group{{ class }}">
             {{ block('children') }}
-        </ul>
+        </div>
     {% endif %}
 
 {% endblock %}
@@ -24,32 +25,44 @@
 
     {% set class = '' %}
     {%- if matcher.isCurrent(item) %}
-        {%- set class = class ~ 'uk-active ' %}
+        {%- set class = class ~ ' active' %}
     {%- endif %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
-        {%- set class = class ~ 'uk-parent' %}
+        {%- set class = class ~ '' %}
     {%- endif %}
 
-    <li {% if class is not empty %}class="{{ class }}{% endif %}">
-        {%- if item.uri is not empty and (not matcher.isCurrent(item) or options.currentAsLink) %}
-            {{ block('linkElement') }}
-        {%- else %}
-            {{ block('spanElement') }}
-        {%- endif %}
-        {{ block('list') }}
-    </li>
+    {%- if item.uri is not empty and (not matcher.isCurrent(item) or options.currentAsLink) %}
+        {{ block('linkElement') }}
+    {%- else %}
+        {{ block('spanElement') }}
+    {%- endif %}
+
+    {{ block('list') }}
 
 {% endblock %}
-
-{% block linkElement %}{% import _self as knp_menu %}
-    <a href="{{ item.uri }}">{{ block('icon') }}{{ item.label|trans }}</a>{% endblock %}
-
-{% block spanElement %}{% import _self as knp_menu %}
-    <span>{{ block('icon') }}{{ item.label|trans }}</span>{% endblock %}
 
 {% block icon %}
 
     {% set icon = item.getExtra('icon', false) %}
-    {% if icon %}<span class="uk-margin-small-right" uk-icon="icon: {{ icon|raw }}"></span> {% endif %}
+    {% if icon %}<i class="fa fa-{{ icon|raw }}" aria-hidden="true"></i> {% endif %}
+
+{% endblock %}
+
+{% block linkElement %}
+
+    {% import _self as knp_menu %}
+    <a class="list-group-item list-group-item-action{% if class is not empty %}{{ class }}{% endif %}" href="{{ item.uri }}">
+        {{ block('icon') }}{{ item.label|trans }}
+    </a>
+
+{% endblock %}
+
+{% block spanElement %}
+
+    {% import _self as knp_menu %}
+
+    <span class="list-group-item list-group-item-action{% if class is not empty %}{{ class }}{% endif %}">
+        {{ block('icon') }}{{ item.label|trans }}
+    </span>
 
 {% endblock %}
