--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Dashboard/index.html.twig
@@ -5,4 +5,6 @@
     {{ "hello"|trans }} in dashboard
     {{ "welcome"|trans }}
 
+    {#{{ render(path('nucms_admin_partial_taxon_tree', {'template': '@NugatoNuCms/Admin/Taxon/Partial/_treeWithoutButtons.html.twig'})) }}#}
+
 {% endblock %}
